HelloUltraviolet/Fixtures/RejectedSource/FFI/ExternGenericSignature/Source/Main.uv
//! Rejected FFI specimen for generic parameters in extern procedure signatures.

extern "C" {
    public procedure importedGeneric<TValue>(value: TValue) -> i32
}

